--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,31 +1,3 @@
-/* stylelint-disable docusaurus/copyright-header */
-
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-
-.heroBanner {
-  padding: 4rem 0;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 966px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-}
-
-.darkBackground {
-  background-color: #212121;
-}
-
-.noMargin {
-  margin: 0px;
-}
-
 .buttons {
   display: flex;
   align-items: center;
@@ -40,6 +12,53 @@
 }
 
 .featureImage {
-  height: 200px;
-  width: 200px;
+  min-height: 150px;
+  max-height: 200px;
+  max-width: 60%;
+  padding-top: 20px;
+  margin: 0 auto;
+}
+
+.featureHeading {
+  font-size: var(--ifm-h3-font-size);
+  padding-top: 1rem;
+  text-align: center;
+}
+
+.hero {
+  background-color: #212121;
+  padding: 48px;
+}
+
+.heroInner {
+  margin: 0 auto;
+  max-width: 1100px;
+  padding: 0 20px;
+}
+
+.heroProjectTagline {
+  color: #ffffff;
+  font-size: 60px;
+  margin: 0;
+  text-align: center;
+}
+
+.heroProjectKeywords {
+  color: var(--ifm-color-primary);
+}
+
+@media only screen and (max-width: 768px) {
+  .hero {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .heroInner {
+    padding: 0;
+  }
+
+  .heroProjectTagline {
+    font-size: 36px;
+    text-align: center;
+  }
 }
