--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,57 +1,43 @@
-/*
-# Colour scheme
-    --blue: #1D73C9
-    --lightblue: #63A6E9
-    --red: #DA4E55
-    --yellow: #F6B355
-    --gray: #212121
-    --black: #00001F
-    -- terminal: #262F40
-*/
+/* ---------------------------------- COLOURS --------------------------------- */
 
-/* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #e06c72;
-  --ifm-color-primary-dark: #da5158;
-  --ifm-color-primary-darker: #d7434b;
-  --ifm-color-primary-darkest: #c02830;
-  --ifm-color-primary-light: #e6878c;
-  --ifm-color-primary-lighter: #e99599;
-  --ifm-color-primary-lightest: #f1bec1;
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #1D73C9;
+  --ifm-color-secondary: #F6B355;
+  --ifm-color-tertiary: #DA4E55;
+  --ifm-color-gray: #212121;
+  --ifm-color-black: #18191a;
+  --ifm-color-white: #ffffff;
 }
 
 html[data-theme='dark'] {
+  --ifm-color-primary: #DA4E55;
   --ifm-background-surface-color: #18191a;
   --ifm-background-color: #212121;
 }
 
-.docusaurus-highlight-code-line {
-  background-color: rgb(0, 0, 0, 0.1);
-  display: block;
-  margin: 0 calc(-1 * var(--ifm-pre-padding));
-  padding: 0 var(--ifm-pre-padding);
+/* ---------------------------------- HEADER --------------------------------- */
+
+.react-toggle {
+  margin-left: 1rem;
 }
 
-html[data-theme='dark'] .docusaurus-highlight-code-line {
-  background-color: rgb(0, 0, 0, 0.3);
-}
-
-/* Doc Title */
-#__docusaurus > div > div > div > div > article > header > h1 {
-  font-size: 6rem;
-}
-
-.footer {
-  background-color: #18191a;
-}
-
-.header-linkedin-link:hover {
-  opacity: 0.6;
-}
-
+.header-linkedin-link:hover ,
 .header-github-link:hover {
   opacity: 0.6;
+}
+
+.header-linkedin-link:before {
+  content: '';
+  width: 24px;
+  height: 24px;
+  display: flex;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 516 516'%3E%3Cpath d='M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683c-27.765,0-50.273-22.691-50.273-50.683C50.104,72.691,72.612,50,100.377,50C128.143,50,150.65,72.691,150.65,100.682z M143.294,187.333H58.277V462h85.017V187.333zM279.195,187.333h-81.541V462h81.541c0,0,0-101.877,0-144.181c0-38.624,17.779-61.615,51.807-61.615c31.268,0,46.289,22.071,46.289,61.615c0,39.545,0,144.181,0,144.181h84.605c0,0,0-100.344,0-173.915s-41.689-109.131-99.934-109.131s-82.768,45.369-82.768,45.369V187.333z'/%3E%3C/svg%3E")
+    no-repeat;
+}
+
+html[data-theme='dark'] .header-linkedin-link:before {
+background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 516 516'%3E%3Cpath fill='white' d='M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683c-27.765,0-50.273-22.691-50.273-50.683C50.104,72.691,72.612,50,100.377,50C128.143,50,150.65,72.691,150.65,100.682z M143.294,187.333H58.277V462h85.017V187.333zM279.195,187.333h-81.541V462h81.541c0,0,0-101.877,0-144.181c0-38.624,17.779-61.615,51.807-61.615c31.268,0,46.289,22.071,46.289,61.615c0,39.545,0,144.181,0,144.181h84.605c0,0,0-100.344,0-173.915s-41.689-109.131-99.934-109.131s-82.768,45.369-82.768,45.369V187.333z'/%3E%3C/svg%3E")
+    no-repeat;
 }
 
 .header-github-link:before {
@@ -66,4 +52,56 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 html[data-theme='dark'] .header-github-link:before {
   background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
     no-repeat;
+}
+
+/* ---------------------------------- FOOTER --------------------------------- */
+
+.footer {
+  background-color: var(--ifm-color-black);
+}
+
+.footer__title {
+  color: var(--ifm-color-secondary);
+}
+
+.footer__link-item {
+  color: var(--ifm-color-white);
+}
+
+/* ---------------------------------- DOCS --------------------------------- */
+
+article > header > h1 {
+    color: var(--ifm-color-primary);
+}
+
+html[data-theme='dark'] article > header > h1 {
+    color: var(--ifm-color-white);
+}
+
+@media only screen and (min-width: 768px) {
+  article > header > h1 {
+    font-size: 7rem !important;
+  }
+
+  .markdown > p,
+  .markdown > ul,
+  .markdown > ol {
+    font-size: 20px;
+  }
+}
+
+.markdown > h1,
+.markdown > h2,
+.markdown > h3,
+.markdown > h4,
+.markdown > h5 {
+  color: var(--ifm-color-secondary);
+}
+
+.docusaurus-highlight-code-line {
+  border: 1px solid var(--ifm-color-primary);
+  font-weight: bold;
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
 }
