--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,30 +1,3 @@
-.buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.features {
-  display: flex;
-  align-items: center;
-  padding: 2rem 0;
-  width: 100%;
-}
-
-.featureImage {
-  min-height: 150px;
-  max-height: 200px;
-  max-width: 60%;
-  padding-top: 20px;
-  margin: 0 auto;
-}
-
-.featureHeading {
-  font-size: var(--ifm-h3-font-size);
-  padding-top: 1rem;
-  text-align: center;
-}
-
 .hero {
   background-color: #212121;
   padding: 48px;
@@ -51,6 +24,7 @@
   .hero {
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 0px;
   }
 
   .heroInner {
@@ -58,7 +32,49 @@
   }
 
   .heroProjectTagline {
-    font-size: 36px;
+    font-size: 42px;
     text-align: center;
   }
+}
+
+.features {
+  display: flex;
+  align-items: center;
+  padding: 2rem 0;
+  width: 100%;
+}
+
+.featureImage {
+  min-height: 150px;
+  max-height: 200px;
+  max-width: 60%;
+  padding-top: 20px;
+  margin: 0 auto;
+}
+
+.featureHeading {
+  color: var(--ifm-color-primary);
+  font-size: var(--ifm-h3-font-size);
+  font-family: Courier, monospace;
+  text-transform: uppercase;
+  padding-top: 1rem;
+  text-align: center;
+}
+
+.featureHeading:before {
+    font-family: Courier, monospace;
+    content: "<";
+    color: var(--ifm-color-secondary);
+}
+
+.featureHeading:after {
+    font-family: Courier, monospace;
+    content: "/>";
+    color: var(--ifm-color-secondary);
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
