--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -36,6 +36,10 @@
   color: var(--ifm-color-primary)
 }
 
+.heroCodeSymbols {
+  color: #ffffff;
+}
+
 .heroProjectKeywords {
   color: var(--ifm-color-primary);
 }
@@ -57,6 +61,10 @@
   .heroProjectTagline {
     font-size: 42px;
     text-align: center;
+  }
+
+  .heroProjectSubTagline {
+    font-size: 32px;
   }
 }
 
