Draft of the Error-handler article

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -84,6 +84,10 @@ html[data-theme='dark'] article > header > h1 {
     font-size: 7rem !important;
   }
 
+  .markdown > h2 {
+    font-size: 2.5rem !important;
+  }
+
   .markdown > p,
   .markdown > ul,
   .markdown > ol {
