--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -112,6 +112,10 @@ html[data-theme='dark'] article > header > h1 {
   padding: 0 var(--ifm-pre-padding);
 }
 
+html[data-theme='dark'] .admonition-note a > code {
+  color: var(--ifm-color-white);
+}
+
 @media only screen and (min-width: 768px) {
   div[role='tabpanel'] p {
     font-size: 20px;
