Custom styles for Algolia search

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,4 @@
-/* ---------------------------------- COLOURS --------------------------------- */
+/* ---------------------------------- COLOURS -------------------------------- */
 
 :root {
   --ifm-color-primary: #1D73C9;
@@ -86,7 +86,7 @@ html[data-theme='dark'] .header-salesforce-link:before {
   color: var(--ifm-color-white);
 }
 
-/* ---------------------------------- DOCS --------------------------------- */
+/* ----------------------------------- DOCS ---------------------------------- */
 
 main {
   margin: 0 auto;
@@ -173,4 +173,47 @@ html[data-theme='dark'] .admonition-note code {
   div[role='tabpanel'] p {
     font-size: 20px;
   }
+}
+
+/* ---------------------------------- SEARCH --------------------------------- */
+
+html[data-theme='light'] .DocSearch {
+  --docsearch-text-color: var(--ifm-font-color-base);
+  --docsearch-muted-color: var(--ifm-font-color-base);
+  --docsearch-container-background: rgba(94, 100, 112, 0.7);
+  /* Modal */
+  --docsearch-modal-background: var(--ifm-color-secondary-lighter);
+  /* Search box */
+  --docsearch-searchbox-background: var(--ifm-color-background-color);
+  --docsearch-searchbox-focus-background: var(--ifm-color-white);
+  /* Hit */
+  --docsearch-hit-color: var(--ifm-font-color-base);
+  --docsearch-hit-active-color: var(--ifm-color-white);
+  --docsearch-hit-background: var(--ifm-color-white);
+  /* Footer */
+  --docsearch-footer-background: var(--ifm-color-white);
+  --docsearch-logo-color: var(--ifm-font-color-base);
+}
+
+html[data-theme='dark'] .DocSearch {
+  --docsearch-text-color: var(--ifm-font-color-base);
+  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
+  --docsearch-container-background: rgba(47, 55, 69, 0.7);
+  /* Modal */
+  --docsearch-modal-background: var(--ifm-background-color);
+  /* Search box */
+  --docsearch-searchbox-background: var(--ifm-background-color);
+  --docsearch-searchbox-focus-background: var(--ifm-color-black);
+  /* Hit */
+  --docsearch-hit-color: var(--ifm-font-color-base);
+  --docsearch-hit-active-color: var(--ifm-color-white);
+  --docsearch-hit-background: var(--ifm-color-emphasis-100);
+  /* Footer */
+  --docsearch-footer-background: var(--ifm-background-surface-color);
+  --docsearch-logo-color: var(--ifm-font-color-base);
+  --docsearch-key-gradient: linear-gradient(
+    -26.5deg,
+    var(--ifm-color-emphasis-200) 0%,
+    var(--ifm-color-emphasis-100) 100%
+  );
 }
