--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -145,7 +145,9 @@ html[data-theme='dark'] article header > h1 {
 }
 
 @media only screen and (min-width: 768px) {
-  div[role='tabpanel'] p {
+  div[role='tabpanel'] p,
+  div[role="tabpanel"] ul,
+  div[role="tabpanel"] ol {
     font-size: 20px;
   }
 
