--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -226,3 +226,23 @@ html[data-theme='dark'] .DocSearch {
       var(--ifm-color-emphasis-200) 0%,
       var(--ifm-color-emphasis-100) 100%);
 }
+
+/* ------------------------------- VIDEO EMBED ------------------------------- */
+
+.video--container {
+  position: relative;
+  padding-bottom: 56.25%;
+}
+
+.video--container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
