--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -219,13 +219,93 @@ html[data-theme='light'] .articlesHeading {
   margin-bottom: 0.5rem;
 }
 
-.eventLink {
-  float: right;
-}
-
 @media only screen and (max-width: 768px) {
   .events {
     padding-left: 20px;
     padding-right: 20px;
+  }
+}
+
+/* Styles for the new newsletter section */
+.newsletter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 0;
+  background-color: #212121;
+  width: 100%;
+}
+
+html[data-theme='dark'] .newsletter {
+  background-color: var(--ifm-color-black);
+}
+
+.newsletterHeading {
+  color: var(--ifm-color-tertiary);
+  font-size: var(--ifm-h2-font-size);
+  font-family: Courier, monospace;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.newsletterHeading:before {
+  font-family: Courier, monospace;
+  content: "<";
+  color: var(--ifm-color-secondary);
+}
+
+.newsletterHeading:after {
+  font-family: Courier, monospace;
+  content: "/>";
+  color: var(--ifm-color-secondary);
+}
+
+.newsletterDescription {
+  font-size: var(--ifm-h4-font-size);
+  margin-bottom: 1.5rem;
+}
+
+html[data-theme='light'] .newsletterDescription {
+  color: var(--ifm-color-white);
+}
+
+.newsletterButtonWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.newsletterButton {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.6em 1.2em;
+  border: 1px solid var(--ifm-color-secondary);
+  background: transparent;
+  color: var(--ifm-color-secondary);
+}
+
+.newsletterButton:hover {
+  background: var(--ifm-color-secondary);
+}
+
+@media only screen and (max-width: 768px) {
+  .newsletter {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .newsletterHeading {
+    font-size: var(--ifm-h3-font-size);
+  }
+
+  .newsletterDescription {
+    font-size: var(--ifm-h5-font-size);
+  }
+
+  .newsletterButtonWrapper {
+    justify-content: flex-start;
+    margin-top: 1rem;
   }
 }
