--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -126,18 +126,22 @@
   color: var(--ifm-color-secondary);
 }
 
-.articles {
+.articles,
+.categories {
   display: flex;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
 }
 
-html[data-theme='light'] .articles {
+html[data-theme='light'] .articles,
+html[data-theme='light'] .categories {
   background-color: #212121;
 }
 
-.articlesHeading {
+
+.articlesHeading,
+.categoriesHeading {
   color: var(--ifm-color-primary);
   font-size: var(--ifm-h3-font-size);
   font-family: Courier, monospace;
@@ -147,36 +151,43 @@ html[data-theme='light'] .articles {
   text-align: center;
 }
 
-html[data-theme='light'] .articlesHeading {
+html[data-theme='light'] .articlesHeading,
+html[data-theme='light'] .categoriesHeading {
   color: var(--ifm-color-tertiary);
 }
 
-.articlesHeading:before {
+.articlesHeading:before,
+.categoriesHeading:before {
   font-family: Courier, monospace;
   content: "<";
   color: var(--ifm-color-secondary);
 }
 
-.articlesHeading:after {
+.articlesHeading:after,
+.categoriesHeading:after {
   font-family: Courier, monospace;
   content: "/>";
   color: var(--ifm-color-secondary);
 }
 
-.articleCard {
+.articleCard,
+.categoryCard {
   margin-bottom: 2rem;
 }
 
-.articleTitle {
+.articleTitle,
+.categoryTitle {
   color: var(--ifm-color-primary);
 }
 
-.articleTag {
+.articleTag,
+.categoryTag {
   color: var(--ifm-color-secondary);
   font-size: var(--ifm-h5-font-size);
 }
 
-.articleLink {
+.articleLink,
+.categoryLink {
   float: right;
 }
 
@@ -192,7 +203,10 @@ html[data-theme='light'] .articlesHeading {
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+}
 
+html[data-theme='dark'] .events {
+  background-color: var(--ifm-card-background-color);
 }
 
 .eventsHeading {
@@ -235,6 +249,10 @@ html[data-theme='light'] .articlesHeading {
   box-shadow: var(--ifm-global-shadow-md) !important;
 }
 
+html[data-theme='dark'] .eventCard {
+  background-color: #212121;
+}
+
 .eventDetail {
   color: var(--ifm-color-secondary);
   font-size: var(--ifm-h5-font-size);
@@ -255,16 +273,12 @@ html[data-theme='light'] .articlesHeading {
   align-items: center;
   justify-content: center;
   padding: 2rem 0;
-  background-color: #212121;
+  background-color: var(--ifm-card-background-color);
   width: 100%;
 }
 
-html[data-theme='dark'] .newsletter {
-  background-color: var(--ifm-color-black);
-}
-
 .newsletterHeading {
-  color: var(--ifm-color-tertiary);
+  color: var(--ifm-color-primary);
   font-size: var(--ifm-h2-font-size);
   font-family: Courier, monospace;
   text-transform: uppercase;
@@ -288,10 +302,6 @@ html[data-theme='dark'] .newsletter {
   margin-bottom: 1.5rem;
 }
 
-html[data-theme='light'] .newsletterDescription {
-  color: var(--ifm-color-white);
-}
-
 .newsletterButtonWrapper {
   display: flex;
   align-items: center;
@@ -304,13 +314,13 @@ html[data-theme='light'] .newsletterDescription {
   align-items: center;
   justify-content: center;
   padding: 0.6em 1.2em;
-  border: 1px solid var(--ifm-color-secondary);
+  border: 1px solid var(--ifm-color-tertiary);
   background: transparent;
-  color: var(--ifm-color-secondary);
+  color: var(--ifm-color-tertiary);
 }
 
 .newsletterButton:hover {
-  background: var(--ifm-color-secondary);
+  background: var(--ifm-color-tertiary);
 }
 
 @media only screen and (max-width: 768px) {
